--- a/recipesRecognition/build.gradle
+++ b/recipesRecognition/build.gradle
@@ -13,6 +13,10 @@ repositories {
 
 dependencies {
     // https://mvnrepository.com/artifact/net.sourceforge.tess4j/tess4j
-    compile group: 'net.sourceforge.tess4j', name: 'tess4j', version: '4.2.2'
+    compile group: 'net.sourceforge.tess4j', name: 'tess4j', version: '4.2.2'// https://mvnrepository.com/artifact/com.sun.media/jai_imageio
+    compile group: 'com.sun.media', name: 'jai_imageio', version: '1.1'
+    compile group: 'net.java.dev.jna', name: 'jna', version: '4.5.2'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    compile group: 'net.sourceforge.lept4j', name: 'lept4j', version: '1.10.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
